# PER-DaqWeb2

./: README.md
daq_web2/: .gitignore  Cargo.toml  Dioxus.toml  package-lock.json
daq_web2/assets/: tailwind.css
daq_web2/sql/migrations/: 00_tables.sql
daq_web2/src/: assets.rs  config.rs  main.rs  routes.rs
daq_web2/src/backend/: back.rs
daq_web2/src/s_helpers/: db.rs
daq_web2/src/server_helpers/: app_state.rs  db.rs  db_helper.rs  mod.rs
daq_web2/src/ui/: blog.rs  home.rs  mod.rs  navbar.rs  upload.rs
