[package]
name = "daq_web2"
version = "0.1.0"
authors = ["Millan Kumar <48894200+LelsersLasers@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.2", features = ["router", "fullstack"] }
axum = { version = "0.8.4", optional = true }
tokio = { version = "1.48.0", features = ["full"], optional = true }
sqlx = { version = "0.8.2", features = ["sqlite", "macros", "runtime-tokio-rustls"], optional = true }
tracing = { version = "0.1.44", optional = true }
serde = "1.0.228"

[features]
default = ["web"]
web = ["dioxus/web"]
server = ["dioxus/server", "dep:axum", "dep:tokio", "dep:sqlx", "dep:tracing"]
# desktop = ["dioxus/desktop"]
# mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
